--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "09-auth",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -13,15 +13,13 @@
     "@tanstack/react-query-devtools": "^5.90.2",
     "axios": "^1.12.2",
     "cookie": "^1.0.2",
-    "formik": "^2.4.6",
-    "next": "^15.5.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next": "15.5.4",
+    "npm": "^11.6.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-paginate": "^8.3.0",
-    "toast": "^0.5.4",
     "use-debounce": "^10.0.6",
-    "yup": "^1.7.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
